--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap');
+
+h2 {
+  font-family: 'Nunito', sans-serif;
+  color: #222222;
+  margin-left: 1rem;
+}
+
 .card {
     background: fixed;
     box-shadow: 0px 0px 10px 5px rgba(128, 128, 128, 0.151);
@@ -9,6 +17,6 @@
   }
   
   .card:hover {
-    box-shadow: 0px 0px 20px 10px rgba(128, 128, 128, 0.219);
+    box-shadow: 0px 0px 20px 10px rgba(128, 128, 128, 0.246);
   }
-  
+
