Static version-interaction bar
Added interaction bar in Card.

--- a/src/features/Header/Header.css
+++ b/src/features/Header/Header.css
@@ -46,6 +46,8 @@ form {
 
 .purple-c {
     color: #5A6CB7;
+}
+.reddit-logo, .purple-c {
     font-family: 'Nunito', sans-serif;
     font-size: 2rem;
 }
