--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -6,12 +6,20 @@ h2 {
   margin-left: 1rem;
 }
 
+p {
+  font-family: 'Nunito', sans-serif;
+  font-size: 18px;
+}
+
 .card {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 10rem;
     background: fixed;
     box-shadow: 0px 0px 10px 5px rgba(128, 128, 128, 0.151);
     margin-bottom: 4rem;
     border-radius: 10px;
-    padding: 3rem;
     transition: box-shadow 0.1s ease-in;
     color: black;
   }
@@ -20,3 +28,46 @@ h2 {
     box-shadow: 0px 0px 20px 10px rgba(128, 128, 128, 0.246);
   }
 
+.interaction-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 30%;
+  background-color: #D9D9D9;
+  border-radius: 0px 0px 10px 10px;
+}
+
+.post-image {
+  height: 70%;
+}
+button {
+  padding: 0px 20px;
+  font-size: 1.5rem;
+}
+.button-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left, .center, .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.center p {
+  padding: 0px 10px;
+  font-size: 16px;
+}
+
+.center .time {
+  color:rgb(102, 101, 101);
+  font-size: 14px;
+}
+
+.right button {
+  font-size: 1.7rem;
+}
