--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -15,12 +15,13 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 100%;
-    height: 20rem;
+    min-width: 100%;
+    height: 30rem;
     background: fixed;
+    background-color: #868686;
     box-shadow: 0px 0px 10px 5px rgba(128, 128, 128, 0.151);
-    margin-bottom: 4rem;
-    border-radius: 10px;
+    margin-bottom: 7rem;
+    border-radius: 10px 10px 0px 0px;
     transition: box-shadow 0.1s ease-in;
     color: black;
   }
