--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -7,9 +7,18 @@
     background-color: #D9D9D9;
     border-radius: 0px 0px 10px 10px;
   }
-  
+  .post-image-container {
+    margin: 0 auto;
+    max-width: 90%;
+    min-width: 80%;
+    height: 100%;
+  }
+
   .post-image {
-    
+    margin: 0 auto;
+    max-width: 100%;
+    min-width: 80%;
+    height: 100%;
   }
   
   
