--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -4,6 +4,7 @@ h2 {
   font-family: 'Nunito', sans-serif;
   color: #222222;
   margin-left: 1rem;
+  width: 85%;
 }
 
 p {
@@ -15,10 +16,10 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-width: 100%;
+    width: 85%;
     height: 30rem;
     background: fixed;
-    background-color: #868686;
+    background-color: #dadada;
     box-shadow: 0px 0px 10px 5px rgba(128, 128, 128, 0.151);
     margin-bottom: 7rem;
     border-radius: 10px 10px 0px 0px;
