--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -4,20 +4,16 @@
     align-items: center;
     width: 100%;
     height: 3rem;
-    background-color: #D9D9D9;
+    background-color: #f6f6f6;
     border-radius: 0px 0px 10px 10px;
   }
   .post-image-container {
     margin: 0 auto;
-    max-width: 90%;
-    min-width: 80%;
     height: 100%;
   }
 
   .post-image {
     margin: 0 auto;
-    max-width: 100%;
-    min-width: 80%;
     height: 100%;
   }
   
