--- a/src/features/Header/Header.css
+++ b/src/features/Header/Header.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap');
 header {
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #F4F4F4;
-    height: 5rem;
+    height: 4.2rem;
     box-shadow: 0px 0px 20px 10px rgba(128, 128, 128, 0.253);
 }
 
