--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -1,3 +1,11 @@
+
+.post-image {
+  width: 100%;
+  margin: 0 auto;
+  height: 100%;
+  border-radius: 10px 10px 0px 0px;
+}
+
 .interaction-bar {
     display: flex;
     justify-content: center;
@@ -7,15 +15,8 @@
     background-color: #f6f6f6;
     border-radius: 0px 0px 10px 10px;
   }
-  .post-image-container {
-    margin: 0 auto;
-    height: 100%;
-  }
+  
 
-  .post-image {
-    margin: 0 auto;
-    height: 100%;
-  }
   
   
   .button-container button {
@@ -41,9 +42,10 @@
     align-items: center;
   }
   
-  .center p {
+  .center .user {
     padding: 0px 10px;
     font-size: 16px;
+    margin-right: 2rem;
   }
   
   .center .time {
@@ -52,12 +54,19 @@
   }
 
   .center {
-    width: 27%;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
   }
   
   .right button {
     font-size: 1.7rem;
+  }
+
+  .comment-section {
+    background-color: #f6f6f6;
+    height: 20rem;
+    width: 100%;
+    overflow: scroll;
   }
