--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -23,11 +23,13 @@
     border: none;
     background: none;
     cursor: pointer;
-    margin: 0;
+    margin: 0px 10px;
     font-size: 1.2rem;
     color: #555555;
-    padding: 0px 20px;
+    width: 40px;
     font-size: 1.5rem;
+    border-radius: 15px;
+    transition: background-color 0.1s ease;
   }
   .button-container {
     width: 100%;
@@ -36,7 +38,7 @@
     align-items: center;
   }
   
-  .left, .right {
+  .left {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,6 +46,8 @@
   
   .center .user {
     padding: 0px 10px;
+    color: blue;
+    font-weight: bold;
     font-size: 16px;
     margin-right: 2rem;
   }
@@ -59,14 +63,34 @@
     justify-content: center;
     align-items: center;
   }
-  
-  .right button {
-    font-size: 1.7rem;
+
+  .right {
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-right: 2rem;
   }
 
-  .comment-section {
+
+.right p {
+    font-size: 13px;
+    color: rgb(105, 105, 105);
+}
+
+.loading-comments {
+  margin: 20px 50px;
+}
+
+.comment-section {
     background-color: #f6f6f6;
     height: 20rem;
     width: 100%;
     overflow: scroll;
-  }
+    border-radius: 0px 0px 10px 10px;
+}
+
+
+.button-container button:hover {
+  background-color: #adadad48;
+}
+
