--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -43,6 +43,26 @@
     justify-content: center;
     align-items: center;
   }
+  .up-vote {
+    color: hsl(120, 100%, 40%);
+    font-size: 1.6rem;
+    animation: spin 0.3s ease;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(365deg);
+    }
+  }
+
+  .down-vote {
+    color: hsl(0, 100%, 50%);
+    font-size: 1.6rem;
+    animation: spin 0.3s ease;
+  }
   
   .center .user {
     padding: 0px 10px;
