Update voting feature
Now each post displayed total number of upvotes according to reddit's API
The number will also display correct colour based on which button is being clicked.

--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -63,6 +63,11 @@
     font-size: 1.6rem;
     animation: spin 0.3s ease;
   }
+
+  .post-votes-value {
+    font-size: 1rem;
+    animation: none;
+  }
   
   .center .user {
     padding: 0px 10px;
